added company props

--- a/properties.yml
+++ b/properties.yml
@@ -1,4 +1,4 @@
-# Thanks to http://goo.gl/wCyUQ
+# Thanks to http:__goo.gl_wCyUQ
 quotes:
   # Pricing
   ask: a
@@ -115,3 +115,219 @@ industries:
   technology: 8
   utilities: 9
 
+companies:
+  agricultural_chemicals: 112
+  aluminum: 132
+  chemicals_major_diversified: 110
+  copper: 131
+  gold: 134
+  independent_oil_and_gas: 121
+  industrial_metals_and_minerals: 133
+  major_integrated_oil_and_gas: 120
+  nonmetallic_mineral_mining: 136
+  oil_and_gas_drilling_and_exploration: 123
+  oil_and_gas_equipment_and_services: 124
+  oil_and_gas_pipelines: 125
+  oil_and_gas_refining_and_marketing: 122
+  silver: 135
+  specialty_chemicals: 113
+  steel_and_iron: 130
+  synthetics: 111
+  conglomerates: 210
+  appliances: 310
+  auto_manufacturers_major: 330
+  auto_parts: 333
+  beverages_brewers: 346
+  beverages_soft_drinks: 348
+  beverages_wineries_and_distillers: 347
+  business_equipment: 313
+  cigarettes: 350
+  cleaning_products: 326
+  confectioners: 345
+  dairy_products: 344
+  electronic_equipment: 314
+  farm_products: 341
+  food_major_diversified: 340
+  home_furnishings_and_fixtures: 311
+  housewares_and_accessories: 312
+  meat_products: 343
+  office_supplies: 327
+  packaging_and_containers: 325
+  paper_and_paper_products: 324
+  personal_products: 323
+  photographic_equipment_and_supplies: 318
+  processed_and_packaged_goods: 342
+  recreational_goods_other: 317
+  recreational_vehicles: 332
+  rubber_and_plastics: 322
+  sporting_goods: 316
+  textile_apparel_clothing: 320
+  textile_apparel_footwear_and_accessories: 321
+  tobacco_products_other: 351
+  toys_and_games: 315
+  trucks_and_other_vehicles: 331
+  accident_and_health_insurance: 431
+  asset_management: 422
+  closed_end_fund_debt: 425
+  closed_end_fund_equity: 426
+  closed_end_fund_foreign: 427
+  credit_services: 424
+  diversified_investments: 423
+  foreign_money_center_banks: 417
+  foreign_regional_banks: 418
+  insurance_brokers: 434
+  investment_brokerage_national: 420
+  investment_brokerage_regional: 421
+  life_insurance: 430
+  money_center_banks: 410
+  mortgage_investment: 447
+  property_and_casualty_insurance: 432
+  property_management: 448
+  reit_diversified: 440
+  reit_healthcare_facilities: 442
+  reit_hotel_motel: 443
+  reit_industrial: 444
+  reit_office: 441
+  reit_residential: 445
+  reit_retail: 446
+  real_estate_development: 449
+  regional_mid_atlantic_banks: 412
+  regional_midwest_banks: 414
+  regional_northeast_banks: 411
+  regional_pacific_banks: 416
+  regional_southeast_banks: 413
+  regional_southwest_banks: 415
+  savings_and_loans: 419
+  surety_and_title_insurance: 433
+  biotechnology: 515
+  diagnostic_substances: 516
+  drug_delivery: 513
+  drug_manufacturers_major: 510
+  drug_manufacturers_other: 511
+  drug_related_products: 514
+  drugs_generic: 512
+  health_care_plans: 522
+  home_health_care: 526
+  hospitals: 524
+  long_term_care_facilities: 523
+  medical_appliances_and_equipment: 521
+  medical_instruments_and_supplies: 520
+  medical_laboratories_and_research: 525
+  medical_practitioners: 527
+  specialized_health_services: 528
+  aerospace_defense_major_diversified: 610
+  aerospace_defense_products_and_services: 611
+  cement: 633
+  diversified_machinery: 622
+  farm_and_construction_machinery: 620
+  general_building_materials: 634
+  general_contractors: 636
+  heavy_construction: 635
+  industrial_electrical_equipment: 627
+  industrial_equipment_and_components: 621
+  lumber_wood_production: 632
+  machine_tools_and_accessories: 624
+  manufactured_housing: 631
+  metal_fabrication: 626
+  pollution_and_treatment_controls: 623
+  residential_construction: 630
+  small_tools_and_accessories: 625
+  textile_industrial: 628
+  waste_management: 637
+  advertising_agencies: 720
+  air_delivery_and_freight_services: 773
+  air_services_other: 772
+  apparel_stores: 730
+  auto_dealerships: 744
+  auto_parts_stores: 738
+  auto_parts_wholesale: 750
+  basic_materials_wholesale: 758
+  broadcasting_radio: 724
+  broadcasting_tv: 723
+  building_materials_wholesale: 751
+  business_services: 760
+  catv_systems: 725
+  catalog_and_mail_order_houses: 739
+  computers_wholesale: 755
+  consumer_services: 763
+  department_stores: 731
+  discount_variety_stores: 732
+  drug_stores: 733
+  drugs_wholesale: 756
+  education_and_training_services: 766
+  electronics_stores: 735
+  electronics_wholesale: 753
+  entertainment_diversified: 722
+  food_wholesale: 757
+  gaming_activities: 714
+  general_entertainment: 716
+  grocery_stores: 734
+  home_furnishing_stores: 737
+  home_improvement_stores: 736
+  industrial_equipment_wholesale: 752
+  jewelry_stores: 742
+  lodging: 710
+  major_airlines: 770
+  management_services: 769
+  marketing_services: 721
+  medical_equipment_wholesale: 754
+  movie_production_theaters: 726
+  music_and_video_stores: 743
+  personal_services: 762
+  publishing_books: 729
+  publishing_newspapers: 727
+  publishing_periodicals: 728
+  railroads: 776
+  regional_airlines: 771
+  rental_and_leasing_services: 761
+  research_services: 768
+  resorts_and_casinos: 711
+  restaurants: 712
+  security_and_protection_services: 765
+  shipping: 775
+  specialty_eateries: 713
+  specialty_retail_other: 745
+  sporting_activities: 715
+  sporting_goods_stores: 740
+  staffing_and_outsourcing_services: 764
+  technical_services: 767
+  toy_and_hobby_stores: 741
+  trucking: 774
+  wholesale_other: 759
+  application_software: 821
+  business_software_and_services: 826
+  communication_equipment: 841
+  computer_based_systems: 812
+  computer_peripherals: 815
+  data_storage_devices: 813
+  diversified_communication_services: 846
+  diversified_computer_systems: 810
+  diversified_electronics: 836
+  healthcare_information_services: 825
+  information_and_delivery_services: 827
+  information_technology_services: 824
+  internet_information_providers: 851
+  internet_service_providers: 850
+  internet_software_and_services: 852
+  long_distance_carriers: 843
+  multimedia_and_graphics_software: 820
+  networking_and_communication_devices: 814
+  personal_computers: 811
+  printed_circuit_boards: 835
+  processing_systems_and_products: 842
+  scientific_and_technical_instruments: 837
+  security_software_and_services: 823
+  semiconductor_broad_line: 830
+  semiconductor_integrated_circuits: 833
+  semiconductor_specialized: 832
+  semiconductor_equipment_and_materials: 834
+  semiconductor_memory_chips: 831
+  technical_and_system_software: 822
+  telecom_services_domestic: 844
+  telecom_services_foreign: 845
+  wireless_communications: 840
+  diversified_utilities: 913
+  electric_utilities: 911
+  foreign_utilities: 910
+  gas_utilities: 912
+  water_utilities: 914
